1. - 메인 화면 스팀세차 눌렀을 때 배경 색상 변경 2. - 메인화면 차량등록 레이아웃 : 삭제 버튼 숨기기 3. - 내정보 : 결제카드 부분 삭제 4. - 쿠폰 UI 변경 5. - 지도(내위치 적용시 현위치로 수정 갱신) 6. - 예약하기 - 쿠폰 연동 7. - 쿠폰 선택 초기화 8. - 전화걸기 권한 강화로 인한 flow 추가 9. - 예매 : 하단 부가서비스 리스트 수정 0. - 결재하기 하단 버튼 생성 1. - 예매 확인 요금 리스트 초기화 추가 2. - 예매 화면 약관 동의 체크 부분 추가 3. - 이용내역 선택 부분 변경 4. - 내정보 아이콘 적용

--- a/app/src/main/res/layout/activity_coupone.xml
+++ b/app/src/main/res/layout/activity_coupone.xml
@@ -46,10 +46,33 @@
         android:id="@+id/couponeHistoryList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coupone_include" />
 
+    <LinearLayout
+        android:id="@+id/coupone_confirm_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|center_horizontal|center_vertical">
+
+        <Button
+            android:id="@+id/coupone_confirm_btn"
+            android:layout_width="312dp"
+            android:layout_height="52dp"
+            android:layout_gravity="bottom|center"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:background="@drawable/default_button_type_1"
+            android:shadowColor="#C4C4C4"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="7"
+            android:text="@string/btn_confirm"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
