--- a/app/src/main/res/layout/activity_my_profile_settings.xml
+++ b/app/src/main/res/layout/activity_my_profile_settings.xml
@@ -96,7 +96,7 @@
                 android:layout_width="21dp"
                 android:layout_height="21dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
+                android:src="@drawable/user"
                 android:layout_marginRight="8dp"/>
         </LinearLayout>
 
@@ -126,7 +126,7 @@
                 android:layout_width="21dp"
                 android:layout_height="21dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
+                android:src="@drawable/notice_copy_2"
                 android:layout_marginRight="8dp"/>
         </LinearLayout>
 
@@ -141,7 +141,8 @@
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
@@ -165,7 +166,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/textColorPrimary" />
+            android:background="@color/textColorPrimary"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/menu_4"
@@ -188,7 +190,7 @@
                 android:layout_width="21dp"
                 android:layout_height="21dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
+                android:src="@drawable/coupon_copy"
                 android:layout_marginRight="8dp"/>
         </LinearLayout>
 
@@ -219,7 +221,7 @@
                 android:layout_width="21dp"
                 android:layout_height="21dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
+                android:src="@drawable/car_copy"
                 android:layout_marginRight="8dp"/>
         </LinearLayout>
 
@@ -250,7 +252,7 @@
                 android:layout_width="21dp"
                 android:layout_height="21dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
+                android:src="@drawable/setting_copy"
                 android:layout_marginRight="8dp"/>
         </LinearLayout>
 
