--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -562,4 +562,28 @@
 
     </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|center_horizontal|center_vertical"
+        app:layout_constraintTop_toBottomOf="@+id/optionServiceList"
+        tools:layout_editor_absoluteX="16dp">
+
+        <Button
+            android:id="@+id/reserve_confirm_btn"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:background="@drawable/default_button_type_1"
+            android:shadowColor="#C4C4C4"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="7"
+            android:text="결재하기"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="-32dp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
