--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -323,6 +323,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="14dp"
+            android:layout_marginBottom="54dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -345,7 +346,7 @@
                 android:shadowDx="0"
                 android:shadowDy="0"
                 android:shadowRadius="7"
-                android:text="결재하기"
+                android:text="확인"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
 
