--- a/app/src/main/res/layout/coupone_list_item.xml
+++ b/app/src/main/res/layout/coupone_list_item.xml
@@ -3,45 +3,62 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
+    android:gravity="center|center_vertical|center_horizontal"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/coupone_layout"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="124dp"
+        android:layout_gravity="center|center_horizontal|center_vertical"
+        android:background="@drawable/default_background_type_2"
+        android:gravity="center|center_vertical|center_horizontal"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="277dp"
-            android:layout_height="72dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/coupone_column1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:gravity="left|center_horizontal|center_vertical"
+            android:text="2000원"
+            android:textColor="#3e3e3e"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/coupone_column1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                android:layout_weight="1"
-                android:gravity="left|center_horizontal|center_vertical"
-                android:text="2000원 할인 쿠"
-                android:textColor="#3e3e3e"
-                android:textSize="15sp" />
+        <TextView
+            android:id="@+id/coupone_column2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="5dp"
+            android:gravity="left|center_horizontal|center_vertical"
+            android:text="추천인 쿠폰"
+            android:textColor="#3e3e3e"
+            android:textSize="13sp" />
 
-            <TextView
-                android:id="@+id/coupone_column2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                android:layout_weight="1"
-                android:gravity="left|center_horizontal|center_vertical"
-                android:text="회원 가입을 축하해요!"
-                android:textColor="#3e3e3e"
-                android:textSize="13sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/coupone_column3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="13dp"
+            android:gravity="left|center_horizontal|center_vertical"
+            android:text="~2020.12.30"
+            android:textColor="#3e3e3e"
+            android:textSize="12sp" />
 
+        <TextView
+            android:id="@+id/coupone_column4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="6dp"
+            android:gravity="left|center_horizontal|center_vertical"
+            android:text="회원 가입을 축하해요!"
+            android:textColor="#3e3e3e"
+            android:textSize="12sp" />
+        <!--
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="72dp"
@@ -61,11 +78,13 @@
 
                 android:text="~2020.12.30"/>
         </LinearLayout>
+-->
     </LinearLayout>
+
     <View
         android:id="@+id/coupone_list_item_divider"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="20dp"
         android:background="#333e3e3e" />
 
 </LinearLayout>
