- 0. 메인 화면 레이아웃 기준 상단으로 수정. - 1. 메인화면 배너 백그라운드 추가. - 2. 지도 갱신시 주소 갱신 안되는 부분 수정. - 3. 추천인 관리 UI Flow 추가 정리 - 4. 공지사항 선택시 효과 적용 - 5. 공지사항 상세보기 배경 변경 - 6. 결제 요청 페이지 테스트 진행 - 7. 결제 후 리턴 받을 페이지 => 타운넷 웹 파트에 요청(전달 jsp,php -> asp 변경해야함) - 8. 로그인시 서버에서 받아 올 파리메터 추가 (내 포인트, 1촌, 2촌, 누적 포인트)

--- a/app/src/main/res/layout/activity_myinfo_detail.xml
+++ b/app/src/main/res/layout/activity_myinfo_detail.xml
@@ -191,13 +191,13 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="324dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="150dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:letterSpacing="0.05"
@@ -206,7 +206,7 @@
                         android:textSize="15sp" />
 
                     <TextView
-                        android:layout_width="250dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
@@ -216,17 +216,22 @@
                         android:textSize="13sp" />
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/myinfo_btnNext"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginRight="32dp"
-                    android:contentDescription="@string/actionbar_prev_icon_description"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:background="@color/base_background_color1"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                    app:srcCompat="@drawable/filled_copy" />
+                <LinearLayout
+                    android:layout_width="167dp"
+                    android:layout_height="72dp"
+                    android:layout_gravity="right"
+                    android:gravity="right|center_vertical|center_horizontal">
+
+                    <TextView
+                        android:id="@+id/myinfo_btnNext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="0dp"
+                        android:gravity="right|clip_horizontal|center_vertical"
+                        android:text="변경"
+                        android:textColor="#ff4d4d"
+                        android:textSize="14sp" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
