--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/customColorPrimary1"
     tools:context=".PasswordChangeActivity">
-
+<!--
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:contentDescription="@string/actionbar_prev_icon_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/filled" />
+            android:src="@drawable/filled" />
 
         <TextView
             android:id="@+id/title_activity"
@@ -41,6 +41,38 @@
             android:textSize="16sp" />
 
     </androidx.appcompat.widget.Toolbar>
+-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/change_include"
+        tools:ignore="MissingConstraints">
+
+        <!-- ActionBar : Back / Title / Info -->
+        <ImageView
+            android:id="@+id/change_btnPrev"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="32dp"
+            android:contentDescription="@string/actionbar_prev_icon_description"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/prev_image_selector" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center|center_horizontal"
+            android:text="@string/title_activity_password_change"
+            android:textColor="#3e3e3e"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/change_btnPrev"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/description_activity"
@@ -56,7 +88,7 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/change_include" />
 
     <!-- 새 비밀번호 입력 -->
     <LinearLayout
@@ -231,7 +263,7 @@
 
     <Button
         android:id="@+id/btnPassword"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="52dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
