--- a/app/src/main/res/layout/activity_myinfo_recom.xml
+++ b/app/src/main/res/layout/activity_myinfo_recom.xml
@@ -200,7 +200,6 @@
                     tools:ignore="MissingConstraints">
 
                     <LinearLayout
-                        android:id="@+id/layout_password1"
                         android:layout_width="176dp"
                         android:layout_height="52dp"
                         android:layout_gravity="center"
@@ -208,7 +207,7 @@
                         android:elevation="10dp"
                         android:gravity="center_vertical|center_horizontal">
 
-                        <EditText
+                        <TextView
                             android:id="@+id/recom_code"
                             android:layout_width="176dp"
                             android:layout_height="match_parent"
@@ -217,12 +216,13 @@
                             android:hint="FCF81"
                             android:textColor="#3E3E3E"
                             android:gravity="center"
-                            android:textSize="15sp" />
+                            android:textSize="15sp"
+                            android:textStyle="bold"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/recom_code_copy"
-                        android:layout_width="116dp"
+                        android:layout_width="match_parent"
                         android:layout_height="52dp"
                         android:layout_marginLeft="29dp"
                         android:layout_gravity="center"
@@ -231,8 +231,8 @@
                         android:gravity="center_vertical|center_horizontal">
 
                         <Button
-                            android:id="@+id/login_btn"
-                            android:layout_width="116dp"
+                            android:id="@+id/recom_code_copy_btn"
+                            android:layout_width="match_parent"
                             android:layout_height="52dp"
                             android:gravity="center"
                             android:background="@drawable/default_button_type_1"
@@ -410,7 +410,6 @@
                     tools:ignore="MissingConstraints">
 
                     <LinearLayout
-                        android:id="@+id/layout_password11"
                         android:layout_width="match_parent"
                         android:layout_height="52dp"
                         android:layout_gravity="center"
@@ -418,7 +417,7 @@
                         android:elevation="10dp"
                         android:gravity="center_vertical|center_horizontal">
 
-                        <EditText
+                        <TextView
                             android:id="@+id/recom_code1"
                             android:layout_width="176dp"
                             android:layout_height="match_parent"
@@ -427,6 +426,61 @@
                             android:hint="ADL281"
                             android:textColor="#3E3E3E"
                             android:gravity="center"
+                            android:textSize="15sp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/myinfo_linearLayout14"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="24dp"
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints">
+
+                    <LinearLayout
+                        android:layout_width="176dp"
+                        android:layout_height="52dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/layout_background"
+                        android:elevation="10dp"
+                        android:gravity="center_vertical|center_horizontal">
+
+                        <EditText
+                            android:id="@+id/recom_code14"
+                            android:layout_width="176dp"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:ems="10"
+                            android:hint="FCF81"
+                            android:textColor="#3E3E3E"
+                            android:gravity="center"
+                            android:textSize="15sp"
+                            android:textStyle="bold"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/recom_code_copy14"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginLeft="29dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/layout_background"
+                        android:elevation="10dp"
+                        android:gravity="center_vertical|center_horizontal">
+
+                        <Button
+                            android:id="@+id/chu_code_btn"
+                            android:layout_width="match_parent"
+                            android:layout_height="52dp"
+                            android:gravity="center"
+                            android:background="@drawable/default_button_type_1"
+                            android:shadowColor="#C4C4C4"
+                            android:shadowDx="0"
+                            android:shadowDy="0"
+                            android:shadowRadius="7"
+                            android:text="등록하기"
+                            android:textColor="#FFFFFF"
                             android:textSize="15sp" />
                     </LinearLayout>
                 </LinearLayout>
