--- a/app/src/main/res/layout/notice_list_item.xml
+++ b/app/src/main/res/layout/notice_list_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:gravity="center_vertical"
+        android:background="@drawable/button_color_selector1"
         android:orientation="vertical">
 
         <TextView
