6. - 등록차량 변경시 안바뀌는 이슈 수정 7. - 시간 예약 페이지에서 예약 완료 된 거 선택시 알림창 추가하고 다음 페이지 이동 방지 추가 8. - 날짜 선택시 오늘보다 하루 후부터 선택 가능하게 추가. 9. - 포인트 계산 -> 팝업으로 입력 받아서 계산하기

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,13 @@
         <item name="android:lineSpacingExtra">12.5sp</item>
         <item name="android:background">@drawable/button_color_selector1</item>
     </style>
+
+    <!-- Base application theme. -->
+
+    <style name="MyAlertDialogStyle" parent="@style/Theme.AppCompat.Dialog.Alert">
+        <item name="android:textColor">@color/customColorPrimary</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:background">@color/sub_main_menu12_bg</item>
+
+    </style>
 </resources>
