5. - 차량 등록시 제조사 및 모델 비교 추가

--- a/app/src/main/res/layout/activity_car_register.xml
+++ b/app/src/main/res/layout/activity_car_register.xml
@@ -181,7 +181,8 @@
                 android:ems="10"
                 android:hint="차종 번호를 입력 하세요"
                 android:textColor="#3E3E3E"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:imeOptions="actionSearch" />
         </LinearLayout>
 
 
