--- a/app/src/main/res/layout/activity_reservation_address.xml
+++ b/app/src/main/res/layout/activity_reservation_address.xml
@@ -43,7 +43,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnSearchCancel"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:imeOptions="actionSearch" />
+            android:imeOptions="actionDone" />
 
         <ImageView
             android:id="@+id/btnSearchCancel"
