0. - 회원가입 : 추천인 코드 건너뛰기 기능 구현 1. - 회원가입 : 약관 동의 화면 추가 및 기능 구현 2. - 인증코드발송, 회원가입 인터페이스 추가 3. - Google Map release key 등록

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -19,6 +19,10 @@
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+    test api key = > AIzaSyAzWYO13aaefTx3ZEwXwBnQvwvLBC28tZ4
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAzWYO13aaefTx3ZEwXwBnQvwvLBC28tZ4</string>
+    <!-- debug -->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCHmr3kzeviiLwDIRBemjuRPnanSqdAiRU</string>
+
+
 </resources>
