--- a/app/src/main/res/layout/activity_use_terms_1.xml
+++ b/app/src/main/res/layout/activity_use_terms_1.xml
@@ -34,7 +34,7 @@
         android:layout_marginBottom="54dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintTop_toBottomOf="@+id/use_terms1_include"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
