0. - 로그인시 로딩프로그래스바 추가 (로그인에 구현되어 있는거 전체적으로 사용할 수 있게 변경) 1. - 메인화면 광고 테두리 변경 2. - 인증문자 발송 인터페이스 적용 3. - 비밀번호 설정 인터페이스 적용 4. - 이용내역 조회 인터페이스 적용 5. - 예약 취소 인터페이스 적용 6. - 추천인 등록 인터페이스 적용 7. - 공지사항 조회 인터페이스 적용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,22 +149,30 @@
                 app:layout_constraintTop_toBottomOf="@+id/btnMainMenu2" />
 
             <!-- 배너 -->
-            <ss.com.bannerslider.Slider
-                android:id="@+id/banner_slider"
+            <LinearLayout
+                android:id="@+id/banner_slider_layout"
                 android:layout_width="0dp"
                 android:layout_height="120dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
-                app:slider_interval="3000"
-                app:slider_loopSlides="true"
-                app:slider_defaultBanner="1"
-                app:slider_indicatorSize="5dp"
-                android:background="@drawable/layout_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3" />
-
+                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3">
+                <ss.com.bannerslider.Slider
+                    android:id="@+id/banner_slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="118dp"
+                    android:paddingBottom="1dp"
+                    android:paddingTop="1dp"
+                    android:paddingRight="1dp"
+                    android:paddingLeft="1dp"
+                    app:slider_interval="3000"
+                    app:slider_loopSlides="true"
+                    app:slider_defaultBanner="1"
+                    app:slider_indicatorSize="5dp"
+                    android:background="@drawable/layout_background" />
+            </LinearLayout>
 <!--
             <Button
                 android:id="@+id/mainBanner"
@@ -190,7 +198,7 @@
                 android:background="@drawable/layout_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/banner_slider">
+                app:layout_constraintTop_toBottomOf="@+id/banner_slider_layout">
 
                 <TextView
                     android:id="@+id/registerTitle"
