--- a/app/src/main/res/layout/activity_reservation_address.xml
+++ b/app/src/main/res/layout/activity_reservation_address.xml
@@ -99,6 +99,39 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_address_layout_divider" />
+        app:layout_constraintTop_toBottomOf="@+id/search_address_layout_divider"
+        android:visibility="gone"/>
 
+
+    <!-- 리스트가 없을때 -->
+    <LinearLayout
+        android:id="@+id/search_history_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="140dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/use_divider"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical|center_horizontal"
+            android:src="@drawable/empty_use"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="43dp"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:text="지번, 도로명, 건물명을 입력하세요"
+            android:textSize="16sp"
+            android:textColor="#3e3e3e"
+            />
+
+            />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
