--- a/app/src/main/res/drawable/loading_animation.xml
+++ b/app/src/main/res/drawable/loading_animation.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false" >
+
+    <item android:drawable="@drawable/loading_1" android:duration="83" />
+    <item android:drawable="@drawable/loading_2" android:duration="83" />
+    <item android:drawable="@drawable/loading_3" android:duration="83" />
+    <item android:drawable="@drawable/loading_4" android:duration="83" />
+
+<!--
     <item android:drawable="@drawable/ani_01" android:duration="83" />
     <item android:drawable="@drawable/ani_02" android:duration="83" />
     <item android:drawable="@drawable/ani_03" android:duration="83" />
@@ -13,4 +20,5 @@
     <item android:drawable="@drawable/ani_10" android:duration="83" />
     <item android:drawable="@drawable/ani_11" android:duration="83" />
     <item android:drawable="@drawable/ani_12" android:duration="83" />
+-->
 </animation-list>
