--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,7 @@
                 android:layout_marginTop="24dp"
                 android:drawableTop="@drawable/group_13"
                 android:text="@string/main_menu_1"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/btnMainMenu2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnCustomerPoint" />
@@ -148,6 +149,33 @@
                 app:layout_constraintStart_toEndOf="@+id/btnMainMenu3"
                 app:layout_constraintTop_toBottomOf="@+id/btnMainMenu2" />
 
+            <!-- 퀵,탁송 버튼 -->
+            <Button
+                android:id="@+id/btnMainMenu5"
+                style="@style/main_menu_button_style"
+                android:layout_width="0dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
+                android:drawableTop="@drawable/shipped"
+                android:text="@string/main_menu_5"
+                app:layout_constraintEnd_toStartOf="@+id/btnMainMenu6"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3" />
+
+            <!-- 배달라이더 버튼 -->
+            <Button
+                android:id="@+id/btnMainMenu6"
+                style="@style/main_menu_button_style"
+                android:layout_width="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="24dp"
+                android:drawableTop="@drawable/scooter"
+                android:text="@string/main_menu_6"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnMainMenu5"
+                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu4" />
+
             <!-- 배너 -->
             <LinearLayout
                 android:id="@+id/banner_slider_layout"
@@ -158,7 +186,7 @@
                 android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3">
+                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu5">
                 <ss.com.bannerslider.Slider
                     android:id="@+id/banner_slider"
                     android:layout_width="match_parent"
